--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,14 @@ dj-database-url==0.5.0
 Django==4.0.2
 django-heroku==0.3.1
 django-storages==1.12.3
+flake8==4.0.1
 gunicorn==20.1.0
 jmespath==0.10.0
+mccabe==0.6.1
 Pillow==9.0.0
 psycopg2==2.9.3
+pycodestyle==2.8.0
+pyflakes==2.4.0
 python-dateutil==2.8.2
 python-decouple==3.5
 python-dotenv==0.19.2
